[package]
name = "dtdrafts"
version = "0.1.2"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
colored = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }
dirs = "5"
tokio = { version = "1", features = ["full"] }
regex = "1"
